Signup: Fix Themes step horizontal scroll (#11299)
* Fix Themes step horizontal scroll

* Fix leftover horizontal scroll

* Update the way header texts are set

* Update code according to code review

--- a/client/signup/style.scss
+++ b/client/signup/style.scss
@@ -13,6 +13,7 @@
 	position: absolute;
 		left: 0;
 		right: 0;
+	overflow: hidden;
 
 	@include breakpoint( "<480px" ) {
 		margin: 0;
